--- a/Store/Views/Category/Index.cshtml
+++ b/Store/Views/Category/Index.cshtml
@@ -1,1 +1,26 @@
+@model List<Category> 
+
 <h1>Category</h1>
+<table class="table table-bordered table-striped">
+    <thead>
+    <tr>
+        <th>
+            Category Name
+        </th>
+        <th>Display Order</th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var obj in Model.OrderBy(obj=>obj.DisplayOrder))
+    {
+        <tr>
+            <td>
+                @obj.Name
+            </td>
+            <td>
+                @obj.DisplayOrder
+            </td>
+        </tr>
+    }
+    </tbody>
+</table>
