--- a/Store/Views/Category/Index.cshtml
+++ b/Store/Views/Category/Index.cshtml
@@ -1,26 +1,36 @@
 @model List<Category> 
 
-<h1>Category</h1>
-<table class="table table-bordered table-striped">
-    <thead>
-    <tr>
-        <th>
-            Category Name
-        </th>
-        <th>Display Order</th>
-    </tr>
-    </thead>
-    <tbody>
-    @foreach (var obj in Model.OrderBy(obj=>obj.DisplayOrder))
-    {
+<div class="container">
+    
+    <div class="row pt-4 pb-3">
+        <div class="col-6">
+            <h2 class="text-primary">Category List</h2>
+        </div>
+        <div class="col-6 text-end">
+            <a class="btn btn-primary" asp-controller="Category" asp-action="Create">Create new category <i class="bi bi-plus-square"></i></a>
+        </div>
+    </div>
+    <table class="table table-bordered table-striped">
+        <thead>
         <tr>
-            <td>
-                @obj.Name
-            </td>
-            <td>
-                @obj.DisplayOrder
-            </td>
+            <th>
+                Category Name
+            </th>
+            <th>Display Order</th>
         </tr>
-    }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        @foreach (var obj in Model.OrderBy(obj => obj.DisplayOrder))
+        {
+            <tr>
+                <td>
+                    @obj.Name
+                </td>
+                <td>
+                    @obj.DisplayOrder
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+</div>
