--- a/Store/Views/Category/Index.cshtml
+++ b/Store/Views/Category/Index.cshtml
@@ -1,7 +1,7 @@
 @model List<Category> 
 
 <div class="container">
-    
+
     <div class="row pt-4 pb-3">
         <div class="col-6">
             <h2 class="text-primary">Category List</h2>
@@ -17,6 +17,7 @@
                 Category Name
             </th>
             <th>Display Order</th>
+            <th></th>
         </tr>
         </thead>
         <tbody>
@@ -28,6 +29,13 @@
                 </td>
                 <td>
                     @obj.DisplayOrder
+                </td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                            <i class="bi bi-pencil-square"></i> Edit
+                        </a>
+                    </div>
                 </td>
             </tr>
         }
