--- a/Store/Areas/Admin/Views/Product/Index.cshtml
+++ b/Store/Areas/Admin/Views/Product/Index.cshtml
@@ -17,6 +17,8 @@
                 Product Name
             </th>
             <th>Price</th>
+            <th>Developer</th>
+            <th>Category</th>
             <th></th>
         </tr>
         </thead>
@@ -28,10 +30,16 @@
                     @obj.Title
                 </td>
                 <td>
-                    @obj.Price$
+                    @obj.ListPrice$
                 </td>
                 <td>
-                    <div class="w-75 btn-group" role="group">
+                    @obj.Developer
+                </td>
+                <td>
+                    
+                </td>
+                <td>
+                    <div class="btn-group" role="group">
                         <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                             <i class="bi bi-pencil-square"></i> Edit
                         </a>
