Create Product ViewModel, add fields on Product create page

--- a/Store/Areas/Admin/Views/Product/Create.cshtml
+++ b/Store/Areas/Admin/Views/Product/Create.cshtml
@@ -1,38 +1,50 @@
-@model Product
+@model ProductVM
 
 <form method="post">
     <div class="border p-3 mt-4">
         <h2 class="text-primary">Create Product</h2>
         <hr/>
         <div class="mb-3 row p-1">
-            <label asp-for="Title" class="p-0"></label>
-            <input asp-for="Title" type="text" class="form-control">
-            <span asp-validation-for="Title" class="text-danger"></span>
+            <label asp-for="Product.Title" class="p-0"></label>
+            <input asp-for="Product.Title" type="text" class="form-control">
+            <span asp-validation-for="Product.Title" class="text-danger"></span>
         </div>
         <div class="mb-3 row p-1">
-            <label asp-for="Description" class="p-0"></label>
-            <input asp-for="Description" type="text" class="form-control">
-            <span asp-validation-for="Description" class="text-danger"></span>
+            <label asp-for="Product.Description" class="p-0"></label>
+            <input asp-for="Product.Description" type="text" class="form-control">
+            <span asp-validation-for="Product.Description" class="text-danger"></span>
         </div>
         <div class="mb-3 row p-1">
-            <label asp-for="Developer" class="p-0"></label>
-            <input asp-for="Developer" type="text" class="form-control">
-            <span asp-validation-for="Developer" class="text-danger"></span>
+            <label asp-for="Product.Developer" class="p-0"></label>
+            <input asp-for="Product.Developer" type="text" class="form-control">
+            <span asp-validation-for="Product.Developer" class="text-danger"></span>
         </div>
         <div class="mb-3 row p-1">
-            <label asp-for="ListPrice" class="p-0"></label>
-            <input asp-for="ListPrice" type="text" class="form-control">
-            <span asp-validation-for="ListPrice" class="text-danger"></span>
+            <label asp-for="Product.ListPrice" class="p-0"></label>
+            <input asp-for="Product.ListPrice" type="text" class="form-control">
+            <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
         </div>
         <div class="mb-3 row p-1">
-            <label asp-for="Price" class="p-0"></label>
-            <input asp-for="Price" type="text" class="form-control">
-            <span asp-validation-for="Price" class="text-danger"></span>
+            <label asp-for="Product.Price" class="p-0"></label>
+            <input asp-for="Product.Price" type="text" class="form-control">
+            <span asp-validation-for="Product.Price" class="text-danger"></span>
         </div>
         <div class="mb-3 row p-1">
-            <label asp-for="PriceFor4Copies" class="p-0"></label>
-            <input asp-for="PriceFor4Copies" type="text" class="form-control">
-            <span asp-validation-for="PriceFor4Copies" class="text-danger"></span>
+            <label asp-for="Product.PriceFor4Copies" class="p-0"></label>
+            <input asp-for="Product.PriceFor4Copies" type="text" class="form-control">
+            <span asp-validation-for="Product.PriceFor4Copies" class="text-danger"></span>
+        </div>
+        <div class="mb-3 row p-1">
+            <label asp-for="Product.CategoryId" class="p-0"></label>
+            <select asp-for="Product.CategoryId" asp-items="@Model.CategoryList" class="form-select">
+                <option disabled selected>--Select Category--</option>
+            </select>
+            <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+        </div>
+        <div class="mb-3 row p-1">
+            <label asp-for="Product.ImageUrl" class="p-0"></label>
+            <input asp-for="Product.ImageUrl" type="text" class="form-control">
+            <span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
         </div>
         <div class="row">
             <div class="col-6">
