--- a/Store/Areas/Admin/Views/Product/Index.cshtml
+++ b/Store/Areas/Admin/Views/Product/Index.cshtml
@@ -7,7 +7,7 @@
             <h2 class="text-primary">Product List</h2>
         </div>
         <div class="col-6 text-end">
-            <a class="btn btn-primary" asp-area="Admin" asp-controller="Product" asp-action="Create">Add new product <i class="bi bi-plus-square"></i></a>
+            <a class="btn btn-primary" asp-area="Admin" asp-controller="Product" asp-action="Upsert">Add new product <i class="bi bi-plus-square"></i></a>
         </div>
     </div>
     <table class="table table-bordered table-striped">
@@ -36,11 +36,11 @@
                     @obj.Developer
                 </td>
                 <td>
-                    
+                    @obj.CategoryId
                 </td>
                 <td>
                     <div class="btn-group" role="group">
-                        <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                        <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                             <i class="bi bi-pencil-square"></i> Edit
                         </a>
                         <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
