--- a/Store/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Store/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,6 +1,8 @@
 @model ProductVM
 
 <form method="post" enctype="multipart/form-data">
+    <input asp-for="Product.Id" hidden>
+    <input asp-for="Product.ImageUrl" hidden>
     <div class="border p-3 mt-4">
         <div class="row">
             <div class="col-10">
