Add Category as include property

--- a/Store/Areas/Admin/Views/Product/Index.cshtml
+++ b/Store/Areas/Admin/Views/Product/Index.cshtml
@@ -36,7 +36,7 @@
                     @obj.Developer
                 </td>
                 <td>
-                    @obj.CategoryId
+                    @obj.Category.Name
                 </td>
                 <td>
                     <div class="btn-group" role="group">
