--- a/Store/Areas/Admin/Views/Product/Index.cshtml
+++ b/Store/Areas/Admin/Views/Product/Index.cshtml
@@ -10,46 +10,19 @@
             <a class="btn btn-primary" asp-area="Admin" asp-controller="Product" asp-action="Upsert">Add new product <i class="bi bi-plus-square"></i></a>
         </div>
     </div>
-    <table class="table table-bordered table-striped">
+    <table id="tblData" class="table table-bordered table-striped">
         <thead>
         <tr>
-            <th>
-                Product Name
-            </th>
+            <th>Product Name</th>
             <th>Price</th>
             <th>Developer</th>
             <th>Category</th>
-            <th></th>
         </tr>
         </thead>
-        <tbody>
-        @foreach (var obj in Model.OrderBy(obj => obj.Id))
-        {
-            <tr>
-                <td>
-                    @obj.Title
-                </td>
-                <td>
-                    @obj.ListPrice$
-                </td>
-                <td>
-                    @obj.Developer
-                </td>
-                <td>
-                    @obj.Category.Name
-                </td>
-                <td>
-                    <div class="btn-group" role="group">
-                        <a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                            <i class="bi bi-pencil-square"></i> Edit
-                        </a>
-                        <a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                            <i class="bi bi-trash3"></i> Delete
-                        </a>
-                    </div>
-                </td>
-            </tr>
-        }
-        </tbody>
     </table>
 </div>
+
+@section Scripts
+{
+    <script src="~/js/product.js"></script>
+}
