--- a/Store/Views/Shared/_Layout.cshtml
+++ b/Store/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/Store.styles.css" asp-append-version="true"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
+    <link rel="stylesheet" href="//cdn.datatables.net/2.0.7/css/dataTables.dataTables.min.css">
 </head>
 <body>
 <header>
@@ -63,6 +64,7 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="//cdn.datatables.net/2.0.7/js/dataTables.min.js" asp-append-version="true"></script>
 <script src="https://cdn.tiny.cloud/1/wtb9zptpdxjwjju1hdz0r0t9cslbgbogfcb4o96fonwg753b/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
