--- a/Store/Views/Shared/_Layout.cshtml
+++ b/Store/Views/Shared/_Layout.cshtml
@@ -65,6 +65,7 @@
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script src="//cdn.datatables.net/2.0.7/js/dataTables.min.js" asp-append-version="true"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.tiny.cloud/1/wtb9zptpdxjwjju1hdz0r0t9cslbgbogfcb4o96fonwg753b/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </body>
