--- a/Store/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/Store/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -5,7 +5,7 @@
     }
     else
     {
-        Layout = "/Areas/Identity/Pages/Account/Manage/_Layout.cshtml";
+        Layout = "/Views/Shared/_Layout.cshtml";
     }
 }
 
